Correction anim collapse

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -12,10 +12,18 @@
         align-items: center;
         padding: 0 20px 0 15px;
 
+        @media screen and (max-width: 768px) {
+            height: 30px;
+        }
+
         h2{
             color: #ffffff;
             font-size: 24px;
             font-weight: 500;
+
+            @media screen and (max-width: 768px) {
+                font-size: 13px;
+            }
         }
     }
 
@@ -26,20 +34,31 @@
         font-size: 18px;
         font-weight: 400;
         padding: 20px;
-        margin-bottom: -40px;
+        
+        
+
+        @media screen and (max-width: 768px) {
+            font-size: 12px;
+            padding-top: 13px;
+            padding-bottom: 19px;
+        }
 
         &_show{
             max-height: 1000px;
-            margin-bottom: 0;
             overflow: hidden;
-            transition: max-height ease-in 0.7s , margin-bottom 0.3s ease-out;
+            transition: max-height ease-in 0.7s , padding 0.3s ease-out;
         }
 
         &_hide{
-            max-height: 0px;
+            height: 0px;
+            padding: 0 20px;
             overflow: hidden;
-            transition: max-height ease-in-out 0.3s , margin-bottom 0.3s ease-out;
+            transition: max-height ease-in-out 0.3s , padding 0.3s ease-out;
         }
+    }
+
+    li{
+        list-style-type: none;
     }
 }
 
